--- a/.github/workflows/render_rmarkdown.yml
+++ b/.github/workflows/render_rmarkdown.yml
@@ -1,5 +1,7 @@
 on:
   push:
+    branches: 
+    - main
     paths: ['**.Rmd']
 
 name: render-rmarkdown
@@ -26,10 +28,11 @@ jobs:
           Rscript -e "rmarkdown::render_site()"
           if [[ "$(git status --porcelain)" != "" ]]; then
             git config --global user.name "$GITHUB_ACTOR"
-            git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
             git add *
             git commit -m "Auto update dashboard"
             git push
+          else
+            echo "There were no changes detected."
           fi
 
           
