--- a/.github/workflows/render_rmarkdown.yml
+++ b/.github/workflows/render_rmarkdown.yml
@@ -22,6 +22,10 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
 
       - uses: r-lib/actions/setup-r-dependencies@v2
+
+      - name: Install R dependencies
+        run: |
+          install.packages('readr')
       
       - name: Render Rmarkdown files and Commit Results
         run: |
